--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,13 @@
 [tox]
+minversion = 4.3.5
 env_list =
     py38
     py39
     py310
     py311
+    py312
     codestyle
-minversion = 4.3.5
+isolated_build = True
 
 [testenv]
 description = run the tests with pytest
@@ -13,7 +15,7 @@ package = wheel
 deps =
     pytest>=6
 commands =
-    pytest {tty:--color=yes} -W error {posargs}
+    python3 -m pytest {tty:--color=yes} -W error {posargs}
 
 [testenv:codestyle]
 skip_install = true
@@ -22,8 +24,12 @@ deps =
     pydocstyle
     isort
     black
+#     mypy
+# changedir = {toxinidir}
 commands =
+    python3 -m flake8 --version
     python3 -m flake8 --count --statistics s1isp
 	python3 -m pydocstyle --count s1isp
 	python3 -m isort --check s1isp
 	python3 -m black --check s1isp
+#     python3 -m mypy --check-untyped-defs --ignore-missing-imports s1isp
