--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,15 +27,12 @@ classifiers = [
     "Topic :: Scientific/Engineering",
     "Topic :: Utilities",
 ]
-dependencies = [
-    'bpack[bs,np]',
-]
+dependencies = ["bpack[bs,np]", "numpy", "tqdm"]
 dynamic = ["version"]
 
 
 [project.optional-dependencies]
-test = ["pytest"]
-# docs = ["sphinx", "sphinx_rtd_theme"]
+cli = ["tqdm", "argcomplete"]
 
 
 [project.urls]
