--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install sphinx
-          python -m pip install .
+          python -m pip install .[cli]
           if [ -f requirements-docs.txt ]; then pip install -r requirements-docs.txt; fi
 
       - name: Build docs
@@ -36,29 +36,21 @@ jobs:
           mkdir -p _static
           python3 -m sphinx -W -b html . _build/html
         working-directory: docs
-        env:
-          PYTHONPATH: ..
 
       - name: Check links
         run: |
           mkdir -p _static
           python3 -m sphinx -W -b linkcheck . _build/linkcheck
         working-directory: docs
-        env:
-          PYTHONPATH: ..
 
       - name: Doctest
         run: |
           mkdir -p _static
           python3 -m sphinx -W -b doctest . _build/doctest
         working-directory: docs
-        env:
-          PYTHONPATH: ..
 
       # - name: Spellcheck
       #   run: |
       #     mkdir -p _static
       #     python3 -m sphinx -W -b spelling . _build/spelling
       #   working-directory: docs
-      #   env:
-      #     PYTHONPATH: ..
