--- a/tox.ini
+++ b/tox.ini
@@ -6,18 +6,33 @@ env_list =
     py310
     py311
     py312
+    coverage
     codestyle
+    docs
+    linkcheck
+    spelling
 isolated_build = True
 
 [testenv]
 description = run the tests with pytest
 package = wheel
+changedir = {envtmpdir}
 deps =
     pytest>=6
 commands =
-    python3 -m pytest {tty:--color=yes} -W error {posargs}
+    python3 -m pytest {tty:--color=yes} -W error {posargs} {package_root}/tests
+
+[testenv:coverage]
+description = run coverage
+deps =
+    pytest>=6
+    pytest-cov
+changedir = {envtmpdir}
+commands =
+     python3 -m pytest {tty:--color=yes} --cov s1isp --cov-report=html --cov-report=term {package_root}/tests
 
 [testenv:codestyle]
+description = run linting
 skip_install = true
 deps =
     flake8
@@ -25,7 +40,7 @@ deps =
     isort
     black
 #     mypy
-# changedir = {toxinidir}
+changedir = {package_root}
 commands =
     python3 -m flake8 --version
     python3 -m flake8 --count --statistics s1isp
@@ -33,3 +48,35 @@ commands =
 	python3 -m isort --check s1isp
 	python3 -m black --check s1isp
 #     python3 -m mypy --check-untyped-defs --ignore-missing-imports s1isp
+
+[testenv:docs]
+description = build docs
+allowlist_externals = mkdir
+changedir = docs
+deps =
+    -r docs/requirements-docs.txt
+commands =
+    mkdir -p _static
+    python3 -m sphinx -W -b html . _build/html
+    python3 -m sphinx -W -b doctest . _build/doctest
+
+[testenv:linkcheck]
+description = linkcheck
+allowlist_externals = mkdir
+changedir = docs
+deps =
+    -r docs/requirements-docs.txt
+commands =
+    mkdir -p _static
+    python3 -m sphinx -W -b linkcheck . _build/linkcheck
+
+[testenv:spelling]
+description = check spelling
+allowlist_externals = mkdir
+changedir = docs
+deps =
+    -r docs/requirements-docs.txt
+    sphinxcontrib-spelling
+commands =
+    mkdir -p _static
+    python3 -m sphinx -W -b spelling . _build/spelling
