--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -27,9 +27,10 @@ jobs:
         shell: bash
         run: |
           python -m pip install --upgrade pip
-          python -m pip install sphinx
-          python -m pip install .[cli]
+          python -m pip install sphinx  # sphinxcontrib-spelling
+          python -m pip install .[test]
           if [ -f requirements-docs.txt ]; then pip install -r requirements-docs.txt; fi
+          if [ -f docs/requirements-docs.txt ]; then pip install -r docs/requirements-docs.txt; fi
 
       - name: Build docs
         run: |
