--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,16 +30,12 @@ jobs:
         shell: bash
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flake8 pydocstyle isort black
+          python -m pip install flake8 isort black mypy ruff
           if [ -f requirements-lint.txt ]; then pip install -r requirements-lint.txt; fi
 
       - name: Lint (flake8)
         run: |
           python -m flake8 --count --show-source --statistics ${PACKAGE}
-
-      - name: Lint (pydocstyle)
-        run: |
-          python -m pydocstyle --count ${PACKAGE}
 
       - name: Lint (isort)
         run: |
@@ -49,3 +45,6 @@ jobs:
         run: |
           python -m black --check ${PACKAGE}
 
+      - name: Lint (ruff)
+        run: |
+          ruff check ${PACKAGE}
