--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,93 @@ use_parentheses = true
 line_length = 79
 
 
-[tool.pydocstyle]
-add-ignore = "D105"
-# add-ignore = "D105", "D107"
+[tool.ruff]
+line-length = 79
+# indent-width = 4
+# target-version = "py39"
+# extend-exclude = ["packagename/parse/*"]
+
+
+[tool.ruff.lint]
+select = [
+    "E",    # E/W pycodestyle
+    "W",    # E/W pycodestyle
+    "F",    # F Pyflakes
+    "D",    # D pydocstyle
+    "N",    # N pep8-naming
+    # "I",    # I isort
+    "B",    # B flake8-bugbear
+    "C90",  # C90 mccabe
+    "UP",   #  UP pyupgrade
+    "YTT",  # YTT flake8-2020
+    # "ANN",  # ANN flake8-annotations
+            #ASYNC flake8-async
+            #TRIO flake8-trio
+    # "S",    #   S flake8-bandit
+    "BLE",  # BLE flake8-blind-except
+    # "FBT",  # FBT flake8-boolean-trap
+    "A",    #   A flake8-builtins
+    # "COM",  # COM flake8-commas
+            # CPY flake8-copyright
+    "C4",   #  C4 flake8-comprehensions
+    "DTZ",  # DTZ flake8-datetimez
+            # T10 flake8-debugger
+            #  DJ flake8-django
+    # "EM",   #  EM flake8-errmsg
+    "EXE",  # EXE flake8-executable
+    # "FA",   #  FA flake8-future-annotations
+    "ISC",  # ISC flake8-implicit-str-concat
+    "ICN",  # ICN flake8-import-conventions
+    "G",    #   G flake8-logging-format
+    "INP",  # INP flake8-no-pep420
+            # PIE flake8-pie
+    "T20",  # T20 flake8-print
+            # PYI flake8-pyi
+    # "PT",   #  PT flake8-pytest-style
+    "Q",    #   Q flake8-quotes
+    "RSE",  # RSE flake8-raise
+    "RET",  # RET flake8-return
+    # "SLF",  # SLF flake8-self
+            #SLOT flake8-slots
+            # SIM flake8-simplify
+            # TID flake8-tidy-imports
+            # TCH flake8-type-checking
+            # INT flake8-gettext
+    # "ARG",  # ARG flake8-unused-arguments
+    # "PTH",  # PTH flake8-use-pathlib
+            #  TD flake8-todos
+            # FIX flake8-fixme
+            # ERA eradicate
+            #  PD pandas-vet
+            # PGH pygrep-hooks
+    # "PL",   #  PL Pylint
+            # TRY tryceratops
+            # FLY flynt
+    "NPY",  # NPY NumPy-specific rules
+            # AIR Airflow
+            #PERF Perflint
+            #FURB refurb
+            # LOG flake8-logging
+            # RUF Ruff-specific rules
+]
+extend-ignore = [
+    "D105",     # D105 Missing docstring in magic method
+    "D107",     # D107 Missing docstring in `__init__`
+    "D203",     # D203 1 blank line required before class docstring
+    "D213",     # D213 Multi-line docstring summary should start at the second line
+    "PLR2004",  # PLR2004 Magic value used in comparison, consider replacing 2 with a constant variable
+    "PLR0913",  # PLR0913 Too many arguments in function definition
+    "RET504",   # RET504 Unnecessary assignment before `return` statement
+    "RET505",   # RET505 Unnecessary `elif` after `return` statement
+]
+
+
+[tool.ruff.lint.per-file-ignores]
+"**/{tests}/*" = ["D"]
+"s1isp/descriptors.py" = ["F821"]
+"s1isp/l0index.py" = ["F821"]
+"s1isp/cli.py" = ["DTZ005"]
+
+
+[tool.ruff.lint.isort]
+length-sort = true
