--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,12 +41,19 @@ jobs:
           python -m build
           python -m twine check dist/*
 
+      - name: Upload source distribution
+        uses: actions/upload-artifact@v4
+        if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.x' }}
+        with:
+          name: sdist
+          path: |
+            dist/*.tar.gz
+
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: dist
+          name: dist-whl-${{ matrix.os }}-${{ matrix.python-version }}
           path: |
-            dist/*.tar.gz
             dist/*.whl
 
       - name: Install
