--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
 minversion = 4.3.5
 env_list =
-    py38
-    py39
     py310
     py311
     py312
+    py313
     coverage
     codestyle
     docs
@@ -17,10 +16,12 @@ isolated_build = True
 description = run the tests with pytest
 package = wheel
 changedir = {envtmpdir}
+extras =
+    s1aux
 deps =
     pytest>=6
 commands =
-    python3 -m pytest {tty:--color=yes} -W error {posargs} {package_root}/tests
+    python3 -m pytest --doctest-modules {tty:--color=yes} -W error {posargs} {package_root}/tests
 
 [testenv:coverage]
 description = run coverage
@@ -29,7 +30,7 @@ deps =
     pytest-cov
 changedir = {envtmpdir}
 commands =
-     python3 -m pytest {tty:--color=yes} --cov s1isp --cov-report=html --cov-report=term {package_root}/tests
+    python3 -m pytest {tty:--color=yes} --cov s1isp --cov-report=html --cov-report=term {package_root}/tests
 
 [testenv:codestyle]
 description = run linting
