--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,7 +86,7 @@ known_first_party = ["s1isp"]
 
 
 [tool.pydocstyle]
-add-ignore = ["D105"]
+add-ignore = ["D105"," D412"]
 # add-ignore = ["D105", "D107"]
 match='(?!(test_|conf)).*\.py'
 
@@ -177,6 +177,7 @@ extend-ignore = [
     # "D107",     # D107 Missing docstring in `__init__`
     "D203",     # D203 1 blank line required before class docstring
     "D213",     # D213 Multi-line docstring summary should start at the second line
+    "D412",     # D412 No blank lines allowed between a section header and its content
     "ISC001",   # ISC001 Implicitly concatenated string literals on one line
     "PLR2004",  # PLR2004 Magic value used in comparison, consider replacing 2 with a constant variable
     # "PLR0913",  # PLR0913 Too many arguments in function definition
