New s1aux/auxio.py module

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,4 @@ recursive-include docs *.rst *.txt Makefile make.bat conf.py
 prune docs/_build
 recursive-include tests *.py
 recursive-include tests/data *.dat *.npz *.json
+recursive-include tests/data/auxio *.xml LICENSE.txt
