Support for Sentinel-1C and Sentinel-1D
* New classes and enums for Sentinel-1 C/D
* Update generate-ref-data.ipynb
* Update reference data for testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -224,3 +224,6 @@ length-sort = true
 
 [tool.ruff.lint.pydocstyle]
 convention = "numpy"  # Accepts: "google", "numpy", or "pep257".
+
+[tool.ruff.lint.mccabe]
+max-complexity = 13
