--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -30,7 +30,7 @@ jobs:
         shell: bash
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flake8 isort black ruff. # mypy pydocstyle
+          python -m pip install flake8 isort black ruff  # mypy pydocstyle
           if [ -f requirements-lint.txt ]; then pip install -r requirements-lint.txt; fi
 
       - name: Lint (flake8)
