--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,7 @@ line-length = 79
 preview = true
 enable-unstable-feature = [
     "hug_parens_with_braces_and_square_brackets",
-    "multiline_string_handling",
+    # "multiline_string_handling",
     "string_processing",
     "wrap_long_dict_values_in_parens",
 ]
